# fastn-mcp

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  docker-compose.yml  docker-entrypoint.sh  fastn-server.py  pyproject.toml
.claude/: settings.local.json
.github/workflows/: PROD.yaml
docs/: architecture.md  lovable-instructions.md
fastn_mcp/: __entrypoint__.py  __init__.py  __main__.py  auth.py  server.py
fastn_mcp/static/: flow-builder.html
fastn_mcp/tools/: __init__.py
tests/: conftest.py  test_server.py
