[project]
name = "fastn-mcp"
version = "0.1.0"
description = "Fastn MCP Server — secure MCP gateway for 250+ enterprise systems with fully managed auth, governed access, and sub-second execution"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
keywords = ["mcp", "fastn", "ai", "agents", "integrations", "connectors", "model-context-protocol"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]

dependencies = [
    "mcp[cli]>=1.2.0",
    "fastn-ai>=0.3.0",
    "httpx>=0.28.1",
    "starlette>=0.27.0",
    "uvicorn>=0.24.0",
    "PyJWT[crypto]>=2.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-httpx>=0.30",
    "httpx>=0.28.1",
]

[project.urls]
Homepage = "https://fastn.ai"
Repository = "https://github.com/fastnai/fastn-mcp"
Documentation = "https://docs.fastn.ai"
Issues = "https://github.com/fastnai/fastn-mcp/issues"

[project.scripts]
fastn-mcp = "fastn_mcp.__main__:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
